<resources>
    <string name="app_name">What Now</string>
    <string name="create_account"><u>Create Account?</u></string>
    <string name="already_have_account"><u>Already Have An Account?</u></string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="search_for_news">Search for news</string>
    <string name="today_s_news">Today\'s News</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="select_news_country">Select News Country</string>
    <string name="save_country">Save Country</string>
    <string name="select_app_language">Select App Language</string>
    <string name="save_language">Save Language</string>
    <string name="save_theme">Save Theme</string>
    <string name="select_app_theme">Select App theme</string>

</resources>
