<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_profile"
        android:layout_marginEnd="10dp"/>
    <TextView
        android:id="@+id/tvSettingsUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User Name"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <Switch
        android:id="@+id/themeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_news_country"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:textColor="@color/white"
        android:id="@+id/saveCountryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_country"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_app_language"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:textColor="@color/white"
        android:id="@+id/saveLanguageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_language"
        android:layout_marginTop="8dp"/>

</LinearLayout>
